# SETR_MiniProject_RealTimeSystem

./: CMakeLists.txt  Doxyfile  Makefile  README.md  nrf52840dk_nrf52840.overlay  prj.conf
dummy/: controller_dummy.c  controller_dummy.h  rtdb_dummy.c  rtdb_dummy.h  uartcomm_dummy.c  uartcomm_dummy.h
html/: annotated.html  classes.html  controller_8c.html  controller_8c__incl.dot  controller_8h.html  controller_8h__dep__incl.dot  controller_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  md_README.html  menudata.js  pages.html  rtdb_8c.html  rtdb_8c__incl.dot  rtdb_8h.html  rtdb_8h__dep__incl.dot  rtdb_8h__incl.dot  rtdb_8h_source.html  structrtdb__t-members.html  structrtdb__t.html  uartcomm_8c.html  uartcomm_8c__incl.dot  uartcomm_8h.html  uartcomm_8h__dep__incl.dot  uartcomm_8h__incl.dot  uartcomm_8h_source.html
html/search/: all_0.js  (+31 more)
include/: controller.h  rtdb.h
latex/: annotated.tex  controller_8c.tex  controller_8c.tex.tmp  controller_8c__incl.dot  controller_8h.tex  controller_8h__dep__incl.dot  controller_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8c.tex  main_8c__incl.dot  md_README.tex  refman.tex  rtdb_8c.tex  rtdb_8c__incl.dot  rtdb_8h.tex  rtdb_8h__dep__incl.dot  rtdb_8h__incl.dot  rtdb_8h_source.tex  structrtdb__t.tex  uartcomm_8c.tex  uartcomm_8c__incl.dot  uartcomm_8h.tex  uartcomm_8h__dep__incl.dot  uartcomm_8h__incl.dot  uartcomm_8h_source.tex
libraries/: Functions.h
src/: controller.c  controller.h  main.c  rtdb.c  rtdb.h  uartcomm.c  uartcomm.h
tests/: CMakeLists.txt  test_controller.c  test_rtdb.c  test_uartcomm.c
tests/src/: test_controller.c  test_rtdb.c  test_uartcomm.c
